--- a/_posts/2019-06-24-군입대.md
+++ b/_posts/2019-06-24-군입대.md
@@ -4,9 +4,10 @@ title:  "군 입대"
 date:   2019-06-24 08:43:59
 author: ivoryRabbit
 categories: 일상
+tag: 
 ---
 
 올해 처음으로 신설된 군사과학기술병으로 입대를 합니다. 
 - 2019.06.24. ~ 2021.01.17.
 
-군대가기전에 못해본 것들, 못가본 곳들 다 마무리 짓고 가고싶었는데... 당일날까지 논문쓰느라 고통만 받다가 논산으로 갑니다.
+군대가기전에 못해본 것들, 못가본 곳들 다 마무리 짓고 가고싶었는데... 당일날까지 논문쓰느라 고통만 받다가 논산으로 ㅠㅠ
