--- a/_posts/2019-11-29-R 사용기(1).md
+++ b/_posts/2019-11-29-R 사용기(1).md
@@ -8,10 +8,10 @@ comments: true
 tag: R, 
 ---
 
-군에서 군사과학기술병으로 근무하면서 많은 것들을 얻어가는 중이다. 가장 큰 성과는 SQL과 R 언어를 습득했다는 점이다. 
+군에서 군사과학기술병으로 근무하면서 많은 것들을 얻어가는 중이다. 그중에서 가장 큰 성과는 SQL과 R 언어를 습득했다는 점이다. 
 
-Python에서 pandas를 깊게 사용했던 적이 있어서 그런지, R의 데이터프레임 구조를 처음 다룰때는 굉장히 익숙한 향기가 났다. 코드를 계속 짜면서 dplyr을 살살 가미하기 시작했는데, 어떻게 보면 편리하기도 하고 어떻게 보면 조잡한 것 같기도 하다.
+Python에서 pandas를 깊게 사용했던 적이 있어서 그런지 R의 데이터프레임 구조를 처음 다룰때는 굉장히 익숙한 향기가 났다. 코드를 계속 짜면서 tidyr 과 dplyr을 살살 가미해보았는데, 어떻게 보면 편리하기도 하고 어떻게 보면 조잡한 것 같기도 하다.
 
-SQL과 R은 어찌보면 비슷한 느낌이 나는데, 나는 이 두 언어를 사용하면서 Python을 사용할 때 이해하지 못한 tidy data 개념을 돌아보게 되었다. 정확히 말하면 나는 수학과 출신이라 tidy data라는 개념이 처음엔 당연하게 느껴졌다. 아마 수학과 커리큘럼을 따라가다 보면 tidy data는 못들어봤어도 그 개념은 정확히 이해할 수 있을 거라 생각된다. 그런데 R로 넘어와서 ggplot을 이용해 시각화를 하다보니 집계함수(aggregation)을 활용할 때가 많아졌다. Tidy data로 셋팅을 하고나서 집계함수를 쓰기 전과 쓴 후에 사용해야 할 plotting 함수들이 서로 다른 것이다. 다시 Python으로 한창 코드를 짤 때를 떠올려보면, 아무생각 없이 사용했던 seaborn 패키지가 다시 생각해보니 굉장히 유용했던 것이다. Tidy data를 대상으로 시각화하는데 초점이 맞추어져 있기 때문이다.
+SQL과 R은 어찌보면 비슷한 느낌이 나는데, 나는 이 두 언어를 사용하면서 Python을 사용할 때 이해하지 못한 tidy data 개념을 돌아보게 되었다. 정확히 말하면 나는 수학과 출신이라 tidy data라는 개념이 처음엔 당연하게 느껴졌다. 아마 수학과 커리큘럼을 따라가다 보면 tidy data는 못 들어봤어도 그 개념은 정확히 이해할 수 있을 거라 생각된다. 그런데 R로 넘어와서 ggplot을 이용해 시각화를 하다보니 집계함수(aggregation)을 활용할 때가 많아졌다. Tidy data로 셋팅을 하고나서 집계함수를 쓰기 전과 쓴 후에 사용해야 할 plotting 함수들이 서로 다른 것이다. 과거에 Python으로 한창 코드를 짤 때를 떠올려보면, 아무생각 없이 사용했던 seaborn 패키지가 다시 생각해보니 굉장히 유용했던 것이다. Tidy data를 대상으로 시각화하는데 초점이 맞추어져 있기 때문이다.
 
 어쨌든 간에 나는 이러한 경험들을 모으고 정리해서 깃허브에 R 프로그래밍을 작성해보려고 한다. 물론 독학한지 얼마되지 않았고, R 관련 책도 읽어본적이 없기 때문에 완벽하지는 않겠지만 이런 back propagation을 계속하다보면 점점 완성되어가지 않을까 싶다.
