--- a/_posts/2019-12-03-R 사용기(2).md
+++ b/_posts/2019-12-03-R 사용기(2).md
@@ -16,7 +16,7 @@ tag: R
 
  보통 Python을 이용하다보면 'for' 이나 'while' 구문, 그러니까 iteration에 익숙해진다. 그런데 pandas를 이용해 데이터를 막 만지다보면 'for'을 사용하는 것이 최악이라는 것을 느끼게 된다. apply 계열 함수를 사용하거나 numpy처럼 배열(array)연산을 지원하는 함수를 사용하면 'for'을 돌리는 것보다 30배에서 1000배 가까이 빠르다. 이런 깨달음들을 몸소 느낀 후에야 R을 우연하게 접하게 되었는데 참으로 다행이라는 생각이 들었다. 왜냐하면 R의 대표적 자료구조는 data frame이며, 이를 다루는 핵심적인 패키지가 tidyverse이기 때문이었다.
 
- R을 다시 사용하면서 느낀 또 다른 문제는 너무나 지저분하다는 것이다. 오랫동안 많은 사람들이 서로다른 기준을 가지고 패키지를 만들어서인지 뭔가 중심이 없다. Python을 사용할 때는, 머리 속에서 '될 것같은' 코드를 짜면 내가 예상한대로 작동하였다. 그런데 이놈의 R은 쉽지 않다. 파이프연산자가 되는게 있고 안되는게 있어서 with를 사용하고, 자료구조가 잘 안들어 맞아서 작동안하는 경우도 많았다. 아직 실력이 부족한 탓이겠지만 나의 직관과는 조금 거리가 있는 언어임은 분명하다.
+ R을 다시 사용하면서 느낀 또 다른 문제는 너무나 지저분하다는 것이다. 오랫동안 많은 사람들이 서로다른 기준을 가지고 패키지를 만들어서인지 뭔가 중심이 없다. Python을 사용할 때는, 머리 속으로 될 것 같은데 싶은 코드를 짜면 내가 예상한대로 작동하였다. 그런데 이놈의 R은 쉽지 않다. 파이프연산자가 되는게 있고 안되는게 있어서 with를 사용해야 하고, 자료구조가 잘 안들어 맞아서 작동 하지 않는 경우도 많았다. 아직 실력이 부족한 탓이겠지만 나의 직관과는 조금 거리가 있는 언어임은 분명하다.
 
 (계속)
 
@@ -44,10 +44,6 @@ titanic_train %>%
   titanic_df
 
 # Pclass
-titanic_df %>% 
-  select(Pclass) %>% 
-  unique()
-
 titanic_df %>%
   mutate(Pclass = as.factor(Pclass)) %>% 
   group_by(Pclass) %>% 
