인구수 수정

--- a/_posts/2019-12-03-R 사용기(2).md
+++ b/_posts/2019-12-03-R 사용기(2).md
@@ -52,7 +52,7 @@ titanic_df %>%
   ) %>% 
   ggplot(aes(x = Pclass, y = cnt, fill = factor(Pclass))) + 
   geom_col(width = .5, show.legend = F) + 
-  ylab('Popular')
+  ylab('Population')
 
 # Sex
 titanic_df %>%
@@ -62,7 +62,7 @@ titanic_df %>%
   ) %>% 
   ggplot(aes(x = Sex, y = cnt, fill = factor(Sex))) + 
   geom_col(width = .5, show.legend = F) + 
-  ylab('Popular')
+  ylab('Population')
 
 # Sex with Survival
 titanic_train %>% 
@@ -73,7 +73,7 @@ titanic_train %>%
   ) %>% 
   ggplot(aes(x = Survived, y = cnt, fill = Sex)) +
   geom_col(width = .5, position = 'dodge') + 
-  ylab('Popular') +
+  ylab('Population') +
   scale_x_discrete(
     labels = c('1' = 'Survived', '0' = 'Dead')
   )
