--- a/_posts/2020-02-26-Python시각화.md
+++ b/_posts/2020-02-26-Python시각화.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: "Python 시각화"
+title: "Python시각화참고"
 date: 2020-02-26 23:45:59
 author: ivoryRabbit
 categories: 개발
 comments: true
 tag: 시각화
+published: false
 ---
 
 # 파이썬 시각화
