--- a/_posts/2019-02-19-오픈.md
+++ b/_posts/2019-02-19-오픈.md
@@ -1,10 +1,10 @@
 ---
 layout:        post
-title:         "Hello, world!"
+title:         Hello, world!
 date:          2019-02-19
 categories:    일상
 author:        ivoryRabbit
-description:   "블로그가 개설되었습니다!"
+description:   블로그가 개설되었습니다.
 comments:      true
 ---
 
@@ -57,7 +57,7 @@ def print_your_name():
 
 $e^{i\pi} + 1 = 0$
 
-__Log Loss(or cross-entropy)__
+__Log Loss(or categorical cross-entropy)__
 
 $$L(w) = -\frac{1}{N}\sum_{i=1}^{N}a_{i}\log p_{i}(w)$$
 
